<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/albumPic"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:id="@+id/playing_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/albumPic"
            android:layout_toStartOf="@+id/play_control"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/playing_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/songs"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:id="@+id/playing_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/artists"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/play_control"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true">

            <ImageButton
                android:id="@+id/play_pause"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="?selectableItemBackground"
                android:contentDescription="@string/play_or_pause"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:src="@drawable/ic_play_circle_outline_black_36dp"
                android:tintMode="src_in" />

            <ImageButton
                android:id="@+id/playlist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="?selectableItemBackground"
                android:contentDescription="@string/playlist"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:src="@drawable/ic_playlist_play_black_24dp"
                android:tintMode="src_in" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>