<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicplayer2.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?android:attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/titleTextColor" />

    <LinearLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/control_container"
        android:layout_below="@+id/toolbar_main"
        android:orientation="vertical">

        <TextView
            android:id="@+id/SongActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/songActivity"
            android:textAppearance="@android:style/TextAppearance.Large" />


        <TextView
            android:id="@+id/ArtistActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/artistActivity"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <TextView
            android:id="@+id/TagActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/tagActivity"
            android:textAppearance="@android:style/TextAppearance.Large" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/control_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include layout="@layout/playback_control" />

    </FrameLayout>
</RelativeLayout>